css: Avoid too much margin in nested lists.

--- a/xsf.css
+++ b/xsf.css
@@ -59,6 +59,11 @@ ol {
   text-align: justify;
 }
 
+/* Avoid too much margin in nested lists */
+ul ul, ol ul, ul ol, ol ol {
+  margin-left: 0px;
+}
+
 pre {
   margin-left: 60px;
 }
